[gd_scene load_steps=14 format=2]

[ext_resource path="res://sprites/d_daok_cosas_strip10.png" type="Texture" id=1]
[ext_resource path="res://scripts/Sdev.gd" type="Script" id=2]
[ext_resource path="res://sprites/d_daok_entes_strip15.png" type="Texture" id=3]
[ext_resource path="res://sprites/d_daok_objetos_strip13.png" type="Texture" id=4]
[ext_resource path="res://sounds/sdev_hola.wav" type="AudioStream" id=5]
[ext_resource path="res://sounds/sdev_encaleta.wav" type="AudioStream" id=6]
[ext_resource path="res://sounds/sdev_roba.wav" type="AudioStream" id=7]
[ext_resource path="res://sounds/sdev_charla.wav" type="AudioStream" id=8]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="CircleShape2D" id=5]
radius = 129.769

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Imagen/Suelo/Cuerpo:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Imagen/Suelo/Cuerpo/Objeto:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 8, 15 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Imagen/Suelo/Cuerpo/Dialogo:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -2, -62 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Imagen/Suelo/PieL:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Imagen/Suelo/PieR:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Imagen/Suelo/Cuerpo:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -3 ), Vector2( 0, 0 ), Vector2( 0, 3 ), Vector2( 0, 0 ), Vector2( 0, -3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Imagen/Suelo/Cuerpo/Objeto:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 8, 15 ), Vector2( 8, 10 ), Vector2( 8, 15 ), Vector2( 8, 20 ), Vector2( 8, 15 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Imagen/Suelo/Cuerpo/Dialogo:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -2, -65 ), Vector2( -2, -62 ), Vector2( -2, -59 ), Vector2( -2, -62 ), Vector2( -2, -65 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Imagen/Suelo/PieL:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Imagen/Suelo/PieR:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "walk"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Imagen/Suelo/Cuerpo:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -3 ), Vector2( 0, 0 ), Vector2( 0, 3 ), Vector2( 0, 0 ), Vector2( 0, -3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Imagen/Suelo/Cuerpo/Objeto:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 8, 15 ), Vector2( 8, 10 ), Vector2( 8, 15 ), Vector2( 8, 20 ), Vector2( 8, 15 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Imagen/Suelo/Cuerpo/Dialogo:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -2, -65 ), Vector2( -2, -62 ), Vector2( -2, -59 ), Vector2( -2, -62 ), Vector2( -2, -65 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Imagen/Suelo/PieL:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -6 ), Vector2( 0, 0 ), Vector2( 0, -6 ), Vector2( 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Imagen/Suelo/PieR:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -6 ), Vector2( 0, 0 ), Vector2( 0, -6 ), Vector2( 0, 0 ), Vector2( 0, -6 ) ]
}

[node name="Sdev" type="Node2D" groups=["enemigo", "monster", "movil", "sdev"]]
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Movil" type="Area2D" parent="."]
collision_layer = 1026
collision_mask = 3
input_pickable = false
__meta__ = {
"_edit_lock_": true
}

[node name="Coli" type="CollisionShape2D" parent="Movil"]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Vigia" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 12288
monitorable = false
__meta__ = {
"_edit_lock_": true
}

[node name="Coli" type="CollisionShape2D" parent="Vigia"]
shape = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Imagen" type="Node2D" parent="." groups=["imagen"]]
__meta__ = {
"_edit_lock_": true
}

[node name="Suelo" type="Node2D" parent="Imagen"]
__meta__ = {
"_edit_lock_": true
}

[node name="PieL" type="Sprite" parent="Imagen/Suelo"]
texture = ExtResource( 3 )
centered = false
offset = Vector2( -58, -98 )
hframes = 15
frame = 6
__meta__ = {
"_edit_lock_": true
}

[node name="PieR" type="Sprite" parent="Imagen/Suelo"]
texture = ExtResource( 3 )
centered = false
offset = Vector2( -58, -98 )
hframes = 15
frame = 7
__meta__ = {
"_edit_lock_": true
}

[node name="Cuerpo" type="Sprite" parent="Imagen/Suelo"]
texture = ExtResource( 3 )
centered = false
offset = Vector2( -58, -98 )
hframes = 15
frame = 5
__meta__ = {
"_edit_lock_": true
}

[node name="Dialogo" type="Sprite" parent="Imagen/Suelo/Cuerpo"]
visible = false
position = Vector2( -2, -62 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( -23, -46 )
hframes = 10
frame = 9
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}

[node name="Objeto" type="Sprite" parent="Imagen/Suelo/Cuerpo"]
position = Vector2( 8, 15 )
texture = ExtResource( 4 )
centered = false
offset = Vector2( -63, -112 )
hframes = 13
__meta__ = {
"_edit_lock_": true
}

[node name="Ray" type="RayCast2D" parent="."]
cast_to = Vector2( 0, 0 )
collision_mask = 8
collide_with_areas = true
collide_with_bodies = false

[node name="Anima" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/walk = SubResource( 4 )

[node name="EsquiveSocial" type="Timer" parent="."]
one_shot = true

[node name="Errar" type="Timer" parent="."]
one_shot = true

[node name="AntiAtasco" type="Timer" parent="."]
one_shot = true

[node name="Buscador" type="Timer" parent="."]
one_shot = true

[node name="Disparador" type="Timer" parent="."]
one_shot = true

[node name="SHola" type="AudioStreamPlayer2D" parent="." groups=["sonido"]]
stream = ExtResource( 5 )
bus = "BusEfectos"
__meta__ = {
"_edit_lock_": true
}

[node name="SEncaleta" type="AudioStreamPlayer2D" parent="." groups=["sonido"]]
stream = ExtResource( 6 )
bus = "BusEfectos"
__meta__ = {
"_edit_lock_": true
}

[node name="SRobo" type="AudioStreamPlayer2D" parent="." groups=["sonido"]]
stream = ExtResource( 7 )
bus = "BusEfectos"
__meta__ = {
"_edit_lock_": true
}

[node name="SCharla" type="AudioStreamPlayer2D" parent="." groups=["sonido"]]
stream = ExtResource( 8 )
bus = "BusEfectos"
__meta__ = {
"_edit_lock_": true
}

[connection signal="area_entered" from="Movil" to="." method="_on_Movil_area_entered"]
[connection signal="area_exited" from="Movil" to="." method="_on_Movil_area_exited"]
[connection signal="area_entered" from="Vigia" to="." method="_on_Vigia_area_entered"]
[connection signal="area_exited" from="Vigia" to="." method="_on_Vigia_area_exited"]
[connection signal="timeout" from="EsquiveSocial" to="." method="_on_EsquiveSocial_timeout"]
[connection signal="timeout" from="Errar" to="." method="_on_Errar_timeout"]
[connection signal="timeout" from="AntiAtasco" to="." method="_on_AntiAtasco_timeout"]
[connection signal="timeout" from="Buscador" to="." method="_on_Buscador_timeout"]
[connection signal="timeout" from="Disparador" to="." method="_on_Disparador_timeout"]
